day10 refact